# ultimate-dice

./: .gitignore  Makefile  README.md  app.py  pyproject.toml
instance/: dice_rolls.db
scripts/: entropy_test.py  plot_entropy_arc.py  plot_fairness.py  roll_fast.py  roll_large.py  roll_once.py  roll_slow.py
static/css/: theme.css
templates/: base.html  index.html  proof_verify.html  roll_detail.html
