[project]
name = "ultimate-dice"
version = "0.1.0"
description = "A modern fantasy-themed web app for provably fair dice rolling, with cryptographic proofs, beautiful UI, and instant verification."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "hive-nectar>=0.0.7",
    "pymongo>=4.13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
